<resources>
    <string name="app_name">cloud_writer_2</string>
    <string name="auth_in_yandex">Авторизоваться в Яндекс</string>
    <string name="auth_cancelled">Авторизация отменена</string>
    <string name="login_type">Метод авторизации</string>
    <string name="login_type_chrome_native">Через приложение</string>
    <string name="login_type_chrome_web_view">Web View</string>
    <string name="login_type_chrome_tab">Вкладка Chrome (плохой)</string>
    <string name="clear_auth">Удалить авторизацию</string>
    <string name="start">Начать</string>
    <string name="hint_dir_name">Имя каталога</string>
    <string name="creating_dir_fragment_button">Создание папок</string>
    <string name="fragment_name_create_dir">Создание папок</string>
    <string name="dir_created">Папка создана: %1$s</string>
    <string name="there_is_no_auth_token">Нет токена авторизации!</string>
    <string name="yandex_disk_storage">Яндекс.Диск</string>
    <string name="local_storage">Локальное хранилище</string>
    <string name="fragment_name_uploading_file">Загрузка файлов</string>
    <string name="select_file_button">Выбрать файл</string>
    <string name="tools_selected_file_view_stub">Выбранный файл</string>
    <string name="uploading_file_button">Загрузка файла на сервер</string>
    <string name="selection_result">Выбрано: %1$s</string>
    <string name="there_is_no_reading_access">Запрещено читать хранилище</string>
    <string name="no_file_selected">Не выбран файл</string>
    <string name="cancel">Отменить</string>
    <string name="cancelled_by_user">Отменено пользователем</string>
    <string name="nothing_to_cancel">Нечего отменять</string>
    <string name="upload_retardation">Замедление отправки %1$d мс</string>
</resources>