<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/fragment_name_uploading_file" />


    <TextView
        android:id="@+id/selectedFileView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="8dp"
        tools:text="@string/tools_selected_file_view_stub" />

    <Button
        android:id="@+id/selectFileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_file_button" />


    <include
        android:id="@+id/include"
        layout="@layout/control_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>