<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.github.aakumykov.MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yandexAuthButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_in_yandex"
        android:backgroundTint="#f8604a"/>

    <RadioGroup
        android:id="@+id/loginType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/loginTypeNative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_type_chrome_native"
            android:checked="true" />

        <RadioButton
            android:id="@+id/loginTypeWebView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_type_chrome_web_view" />

        <RadioButton
            android:id="@+id/loginTypeChromeTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_type_chrome_tab" />

    </RadioGroup>

    <TextView
        android:id="@+id/authTokenView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:text="токен авторизации" />

    <TextView
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/error"
        tools:text="ошибка" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="6dp"/>

</LinearLayout>