<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/fragment_name_create_dir" />

    <RadioGroup
        android:id="@+id/storageTypeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/storageTypeLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_storage" />

        <RadioButton
            android:id="@+id/storageTypeYandexDisk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yandex_disk_storage"
            android:checked="true"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/refreshPathButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@drawable/baseline_refresh_24" />

        <EditText
            android:id="@+id/pathInput"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="text"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:ellipsize="middle"
            android:hint="@string/hint_dir_name" />

        <ImageButton
            android:id="@+id/clearPathButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@drawable/baseline_clear_24" />
    </LinearLayout>

    <include
        android:id="@+id/include"
        layout="@layout/control_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>